Fix header and hero spacing

--- a/style.css
+++ b/style.css
@@ -5,10 +5,10 @@ body {
 
 .header {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     background-color: #1F2937;
-    padding: 20px 0;
+    padding: 20px 150px;
 }
 
 .logo {
@@ -22,7 +22,7 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    gap: 15px;
+    gap: 20px;
 }
 
 a {
@@ -33,9 +33,9 @@ a {
 
 .content1 {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     background-color: #1F2937;
-    padding: 100px 175px;
+    padding: 100px 150px;
 }
 
 .hero-main {
@@ -61,9 +61,10 @@ a {
 }
 
 .right {
-    padding: 50px 100px;
+    padding: 100px;
     background-color: #7b8187;
     color: #F9FAF8;
+    font-size: 18px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -71,4 +72,23 @@ a {
 
 .left {
     width: 450px;
+}
+
+.content2 {
+}
+
+.info-header {
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: bolder;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px 0;
+}
+
+.info-container {
+    display: flex;
+    color: #7b8187;
+    font-size: 18px;
 }
